🐛 (UI) Fix posts not being resized when there is too much content

--- a/web_chat/frontend/style.css
+++ b/web_chat/frontend/style.css
@@ -16,14 +16,15 @@ body {
 	flex-direction: column;
 	align-items: center;
 	margin: 0;
+	padding: 0 8%;
 	height: 100%;
 	background-color: #f5eeee;
 }
 
 .wrapper {
 	height: 100vh;
-	max-width: 85%;
-	min-width: 50%;
+	/*max-width: 85%;*/
+	/*min-width: 50%;*/
 
 	display: flex;
 	flex-direction: column;
@@ -39,16 +40,12 @@ header {
 	font-size: xx-large;
 }
 
-main {
-	height: 74vh;
-}
-
 #posts {
 	display: flex;
 	align-items: flex-start;
 	flex-direction: column;
 	overflow-y: scroll;
-	height: 100%;
+	height: 74vh;
 }
 
 footer {
@@ -90,7 +87,7 @@ footer > form > label {
 	justify-content: space-between;
 	background-color: #bdb5b5;
 	width: 90%;
-	min-height: 15%;
+	/*min-height: 15%;*/
 	margin-bottom: 2%;
 	padding: 0 3%;
 }
